- Implemented: Item name parsing function - modified: detail layout UI

--- a/app/src/main/res/layout/track_detail_fragment.xml
+++ b/app/src/main/res/layout/track_detail_fragment.xml
@@ -21,30 +21,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="15dp"
-                android:weightSum="10"
                 >
 
                 <TextView
                     style="@style/EditText"
-                    android:layout_width="0dp"
-                    android:layout_weight="3"
-                    android:text="상품명"
+                    android:layout_width="match_parent"
                     android:textColor="@color/f1"
-                    android:textSize="18sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    style="@style/EditText"
-                    android:layout_width="0dp"
-                    android:layout_weight="7"
-                    android:textColor="@color/f1"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
+                    android:maxLines="3"
+                    android:singleLine="false"
                     android:text="@{vm.lvTrackEntity.itemName}"
-                    android:textSize="18sp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toRightOf="parent"
                     />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
@@ -54,62 +41,25 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="15dp"
-                android:weightSum="10"
+                android:gravity="center_vertical"
                 >
 
                 <TextView
                     style="@style/EditText"
-                    android:layout_width="0dp"
-                    android:layout_weight="3"
-                    android:text="택배사"
                     android:textColor="@color/f1"
-                    android:textSize="16sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    style="@style/EditText"
-                    android:layout_width="0dp"
-                    android:layout_weight="7"
-                    android:textColor="@color/f1"
+                    android:textSize="14sp"
                     android:text="@{vm.lvTrackEntity.carrierName}"
-                    android:textSize="16sp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toRightOf="parent"
+                    android:hint="@string/carrier_name"
                     />
 
-            </androidx.appcompat.widget.LinearLayoutCompat>
-
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="15dp"
-                android:weightSum="10"
-                >
-
                 <TextView
                     style="@style/EditText"
-                    android:layout_width="0dp"
-                    android:layout_weight="3"
-                    android:text="운송장번호"
                     android:textColor="@color/f1"
                     android:textSize="16sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    style="@style/EditText"
-                    android:layout_width="0dp"
-                    android:layout_weight="7"
-                    android:textColor="@color/f1"
                     android:text="@{vm.lvTrackEntity.trackId}"
-                    android:textSize="16sp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toRightOf="parent"
+                    android:textStyle="bold"
+                    android:hint="@string/track_id"
+                    android:layout_marginLeft="5dp"
                     />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
@@ -118,63 +68,45 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="15dp"
-                android:weightSum="10"
                 >
 
                 <TextView
                     style="@style/EditText"
-                    android:layout_width="0dp"
-                    android:layout_weight="3"
-                    android:text="받는 사람"
-                    android:textColor="@color/f1"
-                    android:textSize="14sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    style="@style/EditText"
-                    android:layout_width="0dp"
-                    android:layout_weight="7"
-                    android:textColor="@color/f1"
-                    android:text="@{vm.lvTrackData.To.name}"
-                    android:textSize="14sp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toRightOf="parent"
-                    />
-
-            </androidx.appcompat.widget.LinearLayoutCompat>
-
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="15dp"
-                android:weightSum="10"
-                >
-
-                <TextView
-                    style="@style/EditText"
-                    android:layout_width="0dp"
-                    android:layout_weight="3"
-                    android:text="보내는 사람"
-                    android:textColor="@color/f1"
-                    android:textSize="14sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    style="@style/EditText"
-                    android:layout_width="0dp"
-                    android:layout_weight="7"
                     android:text="@{vm.lvTrackData.From.name}"
                     android:textColor="@color/f1"
                     android:textSize="14sp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toRightOf="parent"
-                    />
+                    android:textStyle="bold"
+                    android:hint="발송인" />
+
+                <TextView
+                    style="@style/EditText"
+                    android:text="님 으로부터"
+                    android:textColor="@color/f1"
+                    android:textSize="14sp"
+                    android:layout_marginLeft="5dp" />
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="15dp"
+                >
+
+                <TextView
+                    style="@style/EditText"
+                    android:textColor="@color/f1"
+                    android:text="@{vm.lvTrackData.To.name}"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    android:hint="수취인" />
+
+                <TextView
+                    style="@style/EditText"
+                    android:text="님 께"
+                    android:textColor="@color/f1"
+                    android:textSize="14sp"
+                    android:layout_marginLeft="5dp" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
