--- a/app/src/main/res/layout/track_detail_fragment.xml
+++ b/app/src/main/res/layout/track_detail_fragment.xml
@@ -17,25 +17,36 @@
             android:paddingTop="10dp"
             >
 
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="15dp"
                 >
 
                 <TextView
                     style="@style/EditText"
-                    android:layout_width="match_parent"
+                    android:id="@+id/tv_item_name"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:text="@{vm.lvTrackEntity.itemName}"
                     android:textColor="@color/f1"
                     android:textSize="24sp"
                     android:textStyle="bold"
                     android:maxLines="3"
                     android:singleLine="false"
-                    android:text="@{vm.lvTrackEntity.itemName}"
                     />
 
-            </androidx.appcompat.widget.LinearLayoutCompat>
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
+                    android:src="@drawable/baseline_edit_24"
+                    android:tint="@color/f1"
+                    android:padding="4dp"
+                    android:layout_gravity="bottom"
+                    android:onClick="@{()-> vm.onClickItemName()}"
+                    />
 
+            </LinearLayout>
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
