--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -49,7 +49,22 @@
             android:backgroundTint="@color/c1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:icon="@android:drawable/ic_input_add"
+            app:icon="@drawable/baseline_add_24"
+            app:iconTint="@color/f1"
+            app:iconSize="35dp"
+            />
+
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/btn_setting"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:padding="0dp"
+            android:onClick="@{(v) -> vm.onClick(v)}"
+            android:backgroundTint="@color/c1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/btn_add"
+            app:icon="@drawable/baseline_settings_24"
             app:iconTint="@color/f1"
             app:iconSize="35dp"
             />
