--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
 
     <color name="c1">#8AAAE5</color>
     <color name="c2">#dd8AAAE5</color>
+    <color name="c3">#888AAAE5</color>
 
     <color name="f1">#FEFEFE</color>
     <color name="f2">#F0F0F0</color>
