--- a/app/src/main/res/layout/setting_fragment.xml
+++ b/app/src/main/res/layout/setting_fragment.xml
@@ -22,10 +22,9 @@
             >
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/btn_alarm"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingVertical="20dp"
+                android:paddingVertical="10dp"
                 android:paddingHorizontal="30dp"
                 >
 
@@ -41,13 +40,14 @@
                     />
 
                 <com.google.android.material.switchmaterial.SwitchMaterial
-                    android:id="@+id/sc_alarm"
+                    android:id="@+id/sm_alarm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:checked="@{vm.lvIsAllowNotiPermission}"
+                    android:onClick="@{() -> vm.onClickNotiSwitch()}"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    viewModel="@{vm}"
                     />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
