--- a/app/src/main/res/layout/setting_fragment.xml
+++ b/app/src/main/res/layout/setting_fragment.xml
@@ -24,7 +24,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingVertical="10dp"
+                android:paddingVertical="20dp"
                 android:paddingHorizontal="30dp"
                 >
 
@@ -45,6 +45,7 @@
                     android:layout_height="wrap_content"
                     android:checked="@{vm.lvIsAllowNotiPermission}"
                     android:onClick="@{() -> vm.onClickNotiSwitch()}"
+                    android:theme="@style/Switch"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
