--- a/app/src/main/res/layout/item_track.xml
+++ b/app/src/main/res/layout/item_track.xml
@@ -98,6 +98,7 @@
                         android:text="@{item.trackId}"
                         android:textColor="@color/f1"
                         android:onClick="@{() -> vm.onClickTrackId(item)}"
+                        android:layout_marginVertical="3dp"
                         app:layout_constraintTop_toBottomOf="@id/tv_carrier_name"
                         app:layout_constraintLeft_toLeftOf="parent"
                         />
@@ -129,11 +130,12 @@
                         android:id="@+id/tv_time"
                         android:hint="@string/recent_time_empty"
                         android:gravity="end"
-                        android:textColor="@color/f1"
                         android:textSize="14sp"
+                        android:textColor="@color/f1"
+                        android:layout_marginVertical="3dp"
                         tools:text="=@{item.recentTime}"
+                        app:layout_constraintTop_toBottomOf="@id/tv_status"
                         app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"
                         />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
