--- a/app/src/main/res/layout/track_detail_fragment.xml
+++ b/app/src/main/res/layout/track_detail_fragment.xml
@@ -52,6 +52,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="15dp"
+                android:layout_marginVertical="2dp"
                 android:gravity="center_vertical"
                 >
 
@@ -78,6 +79,7 @@
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginVertical="2dp"
                 android:layout_marginHorizontal="15dp"
                 >
 
@@ -101,6 +103,7 @@
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginVertical="2dp"
                 android:layout_marginHorizontal="15dp"
                 >
 
