- Modified: Constantize the repeated string.

--- a/app/src/main/res/layout/dialog_default.xml
+++ b/app/src/main/res/layout/dialog_default.xml
@@ -54,7 +54,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="취소"
+                android:text="@string/cancel"
                 android:textSize="18sp"
                 android:gravity="center"
                 android:background="@color/b3"
@@ -70,7 +70,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="확인"
+                android:text="@string/confirm"
                 android:textSize="18sp"
                 android:textColor="@color/f1"
                 android:gravity="center"
