--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -15,60 +15,108 @@
         android:background="@color/f1"
         >
 
+        <!--        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_margin="20dp"-->
+<!--            android:padding="0dp"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintRight_toRightOf="parent"-->
+<!--            app:icon="@drawable/baseline_add_24"-->
+<!--            app:iconTint="@color/f1"-->
+<!--            app:iconSize="35dp"-->
+<!--            />-->
+
+<!--        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_margin="20dp"-->
+<!--            android:padding="0dp"-->
+<!--            android:backgroundTint="@color/c1"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintRight_toLeftOf="@+id/btn_add"-->
+<!--            app:icon="@drawable/baseline_settings_24"-->
+<!--            app:iconTint="@color/f1"-->
+<!--            app:iconSize="35dp"-->
+<!--            />-->
+
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/sr_layout"
+            isRefreshing="@{vm.lvIsRefresh}"
+            viewModel="@{vm}"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@+id/ll_bottom"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            viewModel="@{vm}"
-            isRefreshing="@{vm.lvIsRefresh}"
+            app:layout_constraintTop_toTopOf="parent"
             >
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_track_list"
+                items="@{vm.lvMyTracksList}"
+                viewModel="@{vm}"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/f1"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                viewModel="@{vm}"
-                items="@{vm.lvMyTracksList}"
-                />
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-            android:id="@+id/btn_add"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:padding="0dp"
-            android:onClick="@{(v) -> vm.onClick(v)}"
-            android:backgroundTint="@color/c1"
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/ll_bottom"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:weightSum="2"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:icon="@drawable/baseline_add_24"
-            app:iconTint="@color/f1"
-            app:iconSize="35dp"
-            />
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:background="@color/c1"
+            >
 
-        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-            android:id="@+id/btn_setting"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:padding="0dp"
-            android:onClick="@{(v) -> vm.onClick(v)}"
-            android:backgroundTint="@color/c1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/btn_add"
-            app:icon="@drawable/baseline_settings_24"
-            app:iconTint="@color/f1"
-            app:iconSize="35dp"
-            />
+            <com.balysv.materialripple.MaterialRippleLayout
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                app:mrl_rippleOverlay="true"
+                app:mrl_rippleDuration="250"
+                >
 
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/btn_setting"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:src="@drawable/baseline_settings_24"
+                    android:tint="@color/f1"
+                    android:padding="7dp"
+                    android:onClick="@{(v) -> vm.onClick(v)}"
+                    />
+
+            </com.balysv.materialripple.MaterialRippleLayout>
+
+            <com.balysv.materialripple.MaterialRippleLayout
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                app:mrl_rippleOverlay="true"
+                app:mrl_rippleDuration="250"
+                >
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/btn_add"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:src="@drawable/baseline_add_24"
+                    android:tint="@color/f1"
+                    android:padding="7dp"
+                    android:onClick="@{(v) -> vm.onClick(v)}"
+                    />
+
+            </com.balysv.materialripple.MaterialRippleLayout>
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
