--- a/app/src/main/res/layout/item_carrier.xml
+++ b/app/src/main/res/layout/item_carrier.xml
@@ -16,11 +16,12 @@
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_carrier_name"
         android:gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingVertical="10dp"
-        android:paddingHorizontal="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingVertical="12dp"
+        android:paddingHorizontal="8dp"
         android:text="@{item.name}"
+        android:textSize="16sp"
         android:hint="@string/carrier_name"
         android:singleLine="true"
         android:textColor="@color/f1"
