--- a/app/src/main/res/layout/item_carrier.xml
+++ b/app/src/main/res/layout/item_carrier.xml
@@ -18,14 +18,16 @@
         android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingVertical="12dp"
-        android:paddingHorizontal="8dp"
         android:text="@{item.name}"
         android:textSize="16sp"
         android:hint="@string/carrier_name"
         android:singleLine="true"
         android:textColor="@color/f1"
-        android:background="@color/c1"
+        android:background="@drawable/rounded_square_8dp"
+        android:paddingVertical="10dp"
+        android:paddingHorizontal="12dp"
+        android:layout_marginHorizontal="6dp"
+        android:layout_marginVertical="4dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
