--- a/app/src/main/res/drawable/rounded_square_8dp.xml
+++ b/app/src/main/res/drawable/rounded_square_8dp.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/c1" />
+    <solid android:color="@color/sel_carrier_background_color" />
     <corners android:radius="8dp" />
-    <stroke android:color="@color/b2"
+    <stroke android:color="@color/f4"
         android:width="1dp" />
 
 </shape>
