--- a/app/src/main/res/layout/item_progress_empty.xml
+++ b/app/src/main/res/layout/item_progress_empty.xml
@@ -16,6 +16,16 @@
         android:orientation="vertical"
         android:gravity="center">
 
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progress1" />
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="15dp"
+            />
+
         <androidx.appcompat.widget.AppCompatTextView
             style="@style/EditText"
             android:id="@+id/tv_carrier_name"
@@ -27,6 +37,11 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
