--- a/app/src/main/res/layout/item_progress_empty.xml
+++ b/app/src/main/res/layout/item_progress_empty.xml
@@ -19,6 +19,7 @@
         <ProgressBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:indeterminateTint="@color/c1"
             android:id="@+id/progress1" />
 
         <Space
