--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,4 +28,26 @@
         <item name="android:colorForeground">#42221f1f</item>
     </style>
 
+    <style name="LinearDevider">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:background">@color/c3</item>
+    </style>
+
+    <style name="LinearDevider.15dp" parent="LinearDevider">
+        <item name="android:layout_marginLeft">15dp</item>
+        <item name="android:layout_marginRight">15dp</item>
+    </style>
+
+    <style name="LinearDevider.20dp" parent="LinearDevider">
+        <item name="android:layout_marginLeft">20dp</item>
+        <item name="android:layout_marginRight">20dp</item>
+    </style>
+
+    <style name="AreaDevider">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">10dp</item>
+        <item name="android:background">@color/c4</item>
+    </style>
+
 </resources>
