--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,10 +3,12 @@
     <color name="b1">#000000</color>
     <color name="b2">#777777</color>
     <color name="b3">#dddddd</color>
+    <color name="b4">#04000000</color>
 
     <color name="c1">#8AAAE5</color>
     <color name="c2">#dd8AAAE5</color>
     <color name="c3">#888AAAE5</color>
+    <color name="c4">#118AAAE5</color>
 
     <color name="f1">#FEFEFE</color>
     <color name="f2">#F0F0F0</color>
